--- a/MyDepth/requirements.txt
+++ b/MyDepth/requirements.txt
@@ -1,4 +1,7 @@
 # timm==0.4.12
+torch==2.1.1
+torchvision==0.16.1
+# torchaudio
 timm==0.6.12
 # https://github.com/Extraltodeus/depthmap2mask/issues/35
 opencv-python==4.8.1.78
@@ -9,5 +12,13 @@ scipy~=1.11.3
 matplotlib~=3.8.1
 h5py~=3.10.0
 
-peft
-pytorch_lightning
+peft==0.6.2
+pytorch_lightning==2.1.2
+tensorflow==2.14.0
+tensorboard==2.14.0
+# protobuf # conda
+# chardet
+# torch-tb-profiler
+
+# six
+imageio
