--- a/MyDepth/requirements.txt
+++ b/MyDepth/requirements.txt
@@ -27,13 +27,13 @@ ipykernel
 
 # 为了dino
 # mmcv==2.1.0 -f https://download.openmmlab.com/mmcv/dist/cu121/torch2.1/index.html
-omegaconf
-fvcore
-iopath
-submitit
---extra-index-url https://pypi.nvidia.com
-cuml-cu11
-# xformers==0.0.18
-xformers
+# omegaconf
+# fvcore
+# iopath
+# submitit
+# --extra-index-url https://pypi.nvidia.com
+# cuml-cu11
+# # xformers==0.0.18
+# xformers
 # 
-mmcv-full==1.5.0
+# mmcv-full==1.5.0
